@@ -12,6 +12,7 @@ from astroid import (
     List,
     Name,
     Try,
+    Tuple,
     Uninferable,
     bases,
     extract_node,
@@ -20,6 +21,21 @@ from astroid.const import PY311_PLUS
 from astroid.context import InferenceContext
 from astroid.nodes import Expr, Raise, TryStar
 
+
+@pytest.mark.skipif(not PY311_PLUS, reason="Requires Python 3.11 or higher")
+def test_group_exceptions_exceptions() -> None:
+    node = extract_node(
+        textwrap.dedent(
+            """
+        try:
+            raise ExceptionGroup('', [TypeError(), TypeError()])
+        except ExceptionGroup as eg:
+            eg.exceptions #@"""
+        )
+    )
+
+    inferred = node.inferred()[0]
+    assert isinstance(inferred, Tuple)
 
 @pytest.mark.skipif(not PY311_PLUS, reason="Requires Python 3.11 or higher")
 def test_group_exceptions() -> None:
